[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/DESIGN.COLLECTION1.AOASWFTE.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sounds/Sound Effects/new folder/Death.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 350
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1921.0
margin_bottom = 1075.0
color = Color( 0.356863, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 661.391
margin_top = 444.468
margin_right = 1171.39
margin_bottom = 562.468
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.454902, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 661.391
margin_top = 570.602
margin_right = 1171.39
margin_bottom = 688.602
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.454902, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1919.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.25
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
